# Vulkan-Shader

./: .gitignore  CMakeLists.txt  README.md  ghibli.comp  grayscale.comp  main  main.cpp  output.ppm  person.comp  utils.cpp  utils.h  vkvia.html
scripts/: yolo-model-export.ipynb
shaders/: ghibli.spv  grayscale.spv  person.spv
src/: config.h  main.cpp
src/core/: buffer_manager.cpp  buffer_manager.hpp  pipeline.cpp  pipeline.hpp  shader_manager.cpp  shader_manager.hpp  vulkan_engine.cpp  vulkan_engine.hpp
src/io/: ppm_handler.cpp  ppm_handler.hpp  video_io.cpp  video_io.hpp
src/processing/: frame_processor.cpp  frame_processor.hpp  mask_generator.cpp  mask_generator.hpp  object_detector.cpp  object_detector.hpp  temp.cpp
test/: TEMP.webm  temp2.webm
test/processed_frames/: processed_frame_10.ppm  processed_frame_100.ppm  processed_frame_101.ppm  processed_frame_102.ppm  processed_frame_103.ppm  processed_frame_104.ppm  processed_frame_105.ppm  processed_frame_106.ppm  processed_frame_107.ppm  processed_frame_108.ppm  processed_frame_109.ppm  processed_frame_11.ppm  processed_frame_110.ppm  processed_frame_111.ppm  processed_frame_112.ppm  processed_frame_113.ppm  processed_frame_114.ppm  processed_frame_115.ppm  processed_frame_116.ppm  processed_frame_117.ppm  processed_frame_118.ppm  processed_frame_119.ppm  processed_frame_12.ppm  processed_frame_120.ppm  processed_frame_121.ppm  processed_frame_122.ppm  processed_frame_123.ppm  processed_frame_124.ppm  processed_frame_125.ppm  processed_frame_126.ppm  processed_frame_127.ppm  processed_frame_128.ppm  processed_frame_129.ppm  processed_frame_13.ppm  processed_frame_130.ppm  processed_frame_131.ppm  processed_frame_132.ppm  processed_frame_133.ppm  processed_frame_134.ppm  processed_frame_135.ppm  (+240 more)
test/processed_frames (ghibli old)/: processed_frame_100.ppm  processed_frame_101.ppm  processed_frame_102.ppm  processed_frame_103.ppm  processed_frame_104.ppm  processed_frame_105.ppm  processed_frame_106.ppm  processed_frame_107.ppm  processed_frame_108.ppm  processed_frame_109.ppm  processed_frame_110.ppm  processed_frame_111.ppm  processed_frame_112.ppm  processed_frame_113.ppm  processed_frame_114.ppm  processed_frame_115.ppm  processed_frame_116.ppm  processed_frame_117.ppm  processed_frame_118.ppm  processed_frame_119.ppm  processed_frame_120.ppm  processed_frame_121.ppm  processed_frame_122.ppm  processed_frame_123.ppm  processed_frame_124.ppm  processed_frame_125.ppm  processed_frame_126.ppm  processed_frame_127.ppm  processed_frame_128.ppm  processed_frame_129.ppm  processed_frame_130.ppm  processed_frame_131.ppm  processed_frame_17.ppm  processed_frame_18.ppm  processed_frame_19.ppm  processed_frame_20.ppm  processed_frame_21.ppm  processed_frame_22.ppm  processed_frame_23.ppm  processed_frame_24.ppm  (+76 more)
test/temp_frames/: frame_10.ppm  frame_100.ppm  frame_101.ppm  frame_102.ppm  frame_103.ppm  frame_104.ppm  frame_105.ppm  frame_106.ppm  frame_107.ppm  frame_108.ppm  frame_109.ppm  frame_11.ppm  frame_110.ppm  frame_111.ppm  frame_112.ppm  frame_113.ppm  frame_114.ppm  frame_115.ppm  frame_116.ppm  frame_117.ppm  frame_118.ppm  frame_119.ppm  frame_12.ppm  frame_120.ppm  frame_121.ppm  frame_122.ppm  frame_123.ppm  frame_124.ppm  frame_125.ppm  frame_126.ppm  frame_127.ppm  frame_128.ppm  frame_129.ppm  frame_13.ppm  frame_130.ppm  frame_131.ppm  frame_132.ppm  frame_133.ppm  frame_134.ppm  frame_135.ppm  (+240 more)
